# sedacs

./: .gitignore  .ruff.toml  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  README.md
docs/source/: CHEQ.rst  INPUT.rst  LATTE.rst  LICENSE.md  PROXY.rst  PYSEQM.rst  README.rst  conf.py  index.rst  running_unit_tests.md
docs/source/installation/: optional_dependencies.md  pdm.md  pip.md  python.md  sedacs.md
examples/cheq_md/: README.md  run_MD.py  submit_experiments.sh  util.py
examples/cheq_md/geo_data/: NVT_300K_water_10008.pt  NVT_300K_water_25050.pt  NVT_300K_water_300.pt  NVT_300K_water_6540.pt
examples/cheq_md/model_data/: best_checkpoint.pt  experiment_structure.pt  model.pt
examples/graph_adaptive_dm_scf_sp2/: input.in  main.py  neighborinfo.txt  vars  wat.xyz
examples/latte_interface/: input.in  latte.in  main.py  vars
examples/latte_interface/bomd/: input.in  latte.in  main.py
examples/latte_interface/scf_energy_forces/: input.in  main.py  vars  water_128.xyz
examples/latte_interface/scf_energy_forces_kernel/: latte.in  main.py  vars
examples/latte_interface_bomd/: input.in  latte.in  regularbomd.py  wat.xyz
examples/latte_interface_energy_forces/: input.in  latte.in  main.py
examples/latte_scf/: input.in  latte.in  main.py  wat.xyz  wat2.xyz
examples/pyseqm_interface/multi_node/: README.md  input.in  main.py  slurm.sl
examples/pyseqm_interface/single_node/: README.md  input.in  main.py  ref_forces.npy
parameters/dftb/: sdc_siesta.py  sdc_sqlite.py
parameters/fitting/: sdc_last_negre_lopez.py
parameters/gpmd_interface_example/: README.md  build_bml.sh  build_cmake.sh  build_progress.sh  clone_all_codes.sh  main_bch_dspl.py  main_mpi.py  main_optim_params.py  main_optim_params_parallel.py  vars
parameters/siesta_calculations/: README.md  sdc_siesta.py  siesta_born_charges.py
proxies/: README.rst  vars
proxies/c/: README.md  build.sh  proxy_a.c  proxy_a.h  proxy_a_lib.c
proxies/fortran/: CMakeLists.txt  compile.sh  compile_with_cmake.sh  proxy_a.F90  proxy_a_lib.F90  proxy_a_mod.F90
proxies/matlab/: DM_PRT_Fermi.m  Energy.m  Ewald_Real_Space.m  Forces_save_00.m  Main.m  Main_save_00.m  PBC_CoulombPot.m  PBC_Energy.m  PBC_SCF.m  PBC_SCF_PRT_X.m  SCF_save_00.m
proxies/matlab_proxyA/: Adjacency.m  Graph_Diff.m  Graph_Diff_and_Update.m  Graph_Proxy_A.m  README.rst  Thresh.m
proxies/matlab_proxyB/: COORD.m  DM_Fermi.m  DensityMatrix.m  DensityMatrixPRT.m  Ewald_k_Space.m  Forces.m  Get_q.m  GetdC.m  GetdS.m  H0_and_S.m  Main_save_01.m  PBC_Coulomb.m  PBC_Forces.m  PBC_Hamiltonian.m  PBC_SCF_PRT.m  PBC_SCF_PRT_0.m  PBC_main.m  SCF.m  Slater_Koster_Block.m  Thresh.m
proxies/python/: aosa_hamiltonian.py  chemical_potential.py  coordinates.py  density_matrix.py  dnnprt.py  energy_and_forces.py  evals_dvals.py  first_level.py  first_level_gpu.py  hamiltonian.py  hamiltonian_elements.py  hamiltonian_random.py  init_proxy.py  nonortho.py  proxy_global.py  random_numbers.py
src/sedacs/: charges.py  chemical_potential.py  coulombic.py  density_matrix.py  density_matrix_renorm.py  energy.py  energy_forces.py  engine.py  evals.py  evals_dvals.py  file_io.py  fock.py  force_fields.py  geometry.py  globals.py  graph.py  graph_partition.py  hamiltonian.py  integrate.py  integrator.py  interface_files.py  interface_modules.py  interface_pyseqm.py  message.py  mixer.py  molSysData.py  mol_sys_data.py  mpi.py  neighbor_list.py  overlap.py  parser.py  periodic_table.py  run_py.py  sdc_density_matrix.py  sdc_energy_forces.py  sdc_evals_dvals.py  sdc_hamiltonian.py  src.cpp  system.py  tbforce_modules.py  (+3 more)
src/sedacs/cheq/: __init__.py  charge_solver.py  range_separated.py  shadow_solver.py
src/sedacs/dev/: io.py
src/sedacs/driver/: classical.py  energy_and_forces.py  graph_adaptive.py  graph_adaptive_MASTER.py  graph_adaptive_kernel_scf.py  graph_adaptive_scf.py  graph_adaptive_scf_energy_forces.py  graph_adaptive_scf_sp2.py  graph_adaptive_sp_energy_forces.py  graph_kernel_byparts.py  init.py  latte_scf.py  old_t.py
src/sedacs/ewald/: PME_torch.py  __init__.py  charge_solver.py  ewald_torch.py  ewald_triton.py
src/sedacs/gpu/: __init__.py  gpuLibInterface.py  library.py
src/sedacs/gpu/amd/: README.md  darwin_shared-gpu-amd-mi250_build.sh
src/sedacs/gpu/amd/src/diag/: diag.cu
src/sedacs/gpu/amd/src/dnnsp2/: anders_deep_NN_SP2.py  deep_NN_SP2_perturbation.py  dnnsp2.cc  linalg_tools.cc  refinement.py  tcore_hp_emulator.cc
src/sedacs/gpu/amd/src/fastcheby/: fastcheby.cu  utils.cu
src/sedacs/gpu/amd/src/invovlp/: invovlp.cu
src/sedacs/gpu/amd/src/mlsp2/: mlsp2.cu
src/sedacs/gpu/example/: coordinates.py  coords.xyz  cu_code.cu  example.py  latte.py  main.py  main_gpu.py  main_latte_call.py  ptable.py  script.py  test.py  vars
src/sedacs/gpu/nvda/: CMakeLists.txt  Makefile  Makefile-bkp  cmake-build.sh  darwin_a100_sharedevkit_build.sh  venado_build.sh  von-neumann_build.sh
src/sedacs/gpu/nvda/include/: chebyshev.cuh  diag.cuh  dnnprt.cuh  dnnsp2.cuh  error_check.cuh  goldensp2.cuh  invovlp.cuh  lib.h  linalg_tools.cuh  mlsp2.cuh  movingmusp2.cuh  pscheby.cuh  structs.h  tcore_hp_emulator.cuh  utils.cuh
src/sedacs/gpu/nvda/src/diag/: diag.cu
src/sedacs/gpu/nvda/src/dnnprt/: dnnprt.cu
src/sedacs/gpu/nvda/src/dnnsp2/: anders_deep_NN_SP2.py  deep_NN_SP2_perturbation.py  dnnsp2.cu  linalg_tools.cu  refinement.py  tcore_hp_emulator.cu
src/sedacs/gpu/nvda/src/fastcheby/: fastcheby.cu  utils.cu
src/sedacs/gpu/nvda/src/finite-t-sp2/: finitetsp2.cu
src/sedacs/gpu/nvda/src/goldensp2/: goldensp2.cu
src/sedacs/gpu/nvda/src/invovlp/: invovlp.cu
src/sedacs/gpu/nvda/src/lib/: libnvda.cu
src/sedacs/gpu/nvda/src/mlsp2/: mlsp2.cu
src/sedacs/gpu/nvda/src/movingmusp2/: movingmusp2.cu
src/sedacs/gpu/nvda/src/test/: cu_code.cu  makefile-testcu  test.cu  test.py
src/sedacs/interface/: pyseqm.py
src/sedacs/latte/: coords.xyz  latte.py  main_latte_call.py  vars
tests/: test_ewald.py  test_neighbor_list.py  util.py
tests/data/water_6540/: ewald_data.pkl
(+1 files in other folders)
