[project]
name = "sedacs"
version = "0.1.0"
description = "Scalable Ecosystem, Driver, and Analyzer for Complex Chemistry Simulations (SEDACS) enables massively parallel atomistic quantum molecular dynamics simulations that can seamlessly integrate with a diverse range of available and emerging quantum chemistry codes at different levels of theory."
authors = [
    {name = "Christian Francisco Negre", email = "christianfannegre@gmail.com"},
    {name = "Joshua David Finkelstein", email = "finkeljos@gmail.com"},
    {name = "Michael E. Wall", email = "mewall@lanl.gov"},
    {name = "Cheng-Han Li", email = "XXXX@lanl.gov"},
    {name = "Robert Stanton", email = "XXXX@lanl.gov"},
    {name = "Anders Niklasson", email = "amn@lanl.gov"},
    {name = "Maksim Kulichenko", email = "maxim@lanl.gov"},
    {name = "Mehmet Cagri Kaymak", email = "mkaymak@lanl.gov"},
    {name = "Alejandro Lopez-Bezanilla", email = "alopezb@cadejo.lanl.gov"},
    {name = "Qi Zhang", email = "singularitti@outlook.com"},
]
dependencies = [
    "scipy>=1",
    "numpy>=1",
    "torch>=2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
mdtraj = [
    "mdtraj>=1",
]
mpi = [
    "mpi4py>=3",
]
graph = [
    "metis>=0.2a5"
]

[build-system]
requires = ["scikit-build-core","setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.5"
cmake.source-dir = "src/sedacs/gpu/nvda/"
cmake.args = [
  "-DCMAKE_CXX_COMPILER=nvc++",
  "-DCMAKE_CXX_FLAGS=-O3 -cuda -gpu=cc89 -acc=gpu -Minfo=accel -fPIC --diag_suppress=bad_macro_redef --diag_suppress=cuda_compile",
  "-DCMAKE_VERBOSE_MAKEFILE=ON"
]
build-dir = "src/sedacs/gpu/nvda/build"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8",
    "tox-pdm>=0.7.2",
]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "matscipy==1.1.1",
    "absl-py",
]
doc = [
    "sphinx>=7",
    "myst-parser>=4.0.0",
    "sphinx-press-theme>=0.9.1",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
